--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
   </header>
 
   <main>
-    <section class="vak">Open Call</section>
-    <section class="vak">Kunstenaars</section>
-    <section class="vak">Over Vitrien</section>
-    <section class="vak">Data's + Locaties</section>
-    <section class="vak">Team</section>
+    <div class="vak">Open Call</div>
+    <div class="vak">Kunstenaars</div>
+    <div class="vak">Over Vitrien</div>
+    <div class="vak">Data's + Locaties</div>
+    <div class="vak">Team</div>
   </main>
 
 </body>
