--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </div>
   </header>
 
-  <main>
-    <div class="vak">Open Call</div>
-    <div class="vak">Kunstenaars</div>
-    <div class="vak">Over Vitrien</div>
-    <div class="vak">Data's + Locaties</div>
-    <div class="vak">Team</div>
-  </main>
+ <main>
+  <a href="pagina’s/open-call.html" class="vak">Open Call</a>
+  <a href="pagina’s/kunstenaars.html" class="vak">Kunstenaars</a>
+  <a href="pagina’s/over-vitrien.html" class="vak">Over Vitrien</a>
+  <a href="pagina’s/datas-locaties.html" class="vak">Data's + Locaties</a>
+  <a href="pagina’s/team.html" class="vak">Team</a>
+</main>
 
 </body>
 </html>
