--- a/pagina's/open call.html
+++ b/pagina's/open call.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Open Call – Vitrien</title>
+  <link rel="stylesheet" href="../style.css" />
+  <style>
+    .content {
+      margin-top: 100px; /* ruimte onder vaste header */
+      padding: 40px 20px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 1.2rem;
+      line-height: 1.6;
+    }
 
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    p + p {
+      margin-top: 1em;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <div class="left">
+      <a href="../index.html" class="home-button">VITRIEN</a>
+    </div>
+    <div class="right">
+      <a href="#contact" class="top-button">Contact</a>
+      <select class="language-select">
+        <option value="nl">NL</option>
+        <option value="en">EN</option>
+      </select>
+    </div>
+  </header>
+
+  <main class="content">
+    <h1>Open Call</h1>
+    <p>
+      Dit najaar transformeert Vitrien de Bondgenotenlaan in Leuven tot een onverwachte kunstroute vol prikkelende ontmoetingen.
+    </p>
+    <p>
+      We zoeken kunstenaars die willen exposeren in etalages of unieke stadsplekken, in het kader van de kandidatuur van Leuven voor Europese Culturele Hoofdstad – LOV2030.
+    </p>
+    <p>
+      Alle disciplines zijn welkom. We werken met bestaand werk, maar staan open voor experiment. Toon ons wie je bent en wat je maakt.
+    </p>
+    <p>
+      Interesse? Stuur ons je voorstel via het formulier. Meer info volgt binnenkort.
+    </p>
+  </main>
+
+</body>
+</html>
