--- a/index.html
+++ b/index.html
@@ -5,12 +5,123 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VITRIEN</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'IM Fell English', serif;
+    }
+
+    .intro-video-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: #e50a06;
+      z-index: 9999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+
+    .intro-video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: white;
+      z-index: 10;
+      border-bottom: 1px solid black;
+    }
+
+    .home-button {
+      text-decoration: none;
+      color: black;
+      font-weight: bold;
+      font-size: 1.2rem;
+    }
+
+    .top-button {
+      text-decoration: none;
+      color: black;
+      margin-right: 15px;
+    }
+
+    .language-select {
+      border: none;
+      background: none;
+      font-size: 1rem;
+    }
+
+    main {
+      display: flex;
+      height: calc(100vh - 80px);
+      margin-top: 80px;
+    }
+
+    .vak {
+      flex: 1;
+      border: 1px solid black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 2rem;
+      text-align: center;
+      text-decoration: none;
+      color: black;
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+
+    .vak:hover,
+    .vak:active {
+      background-color: #e50a06;
+      color: white;
+      cursor: pointer;
+    }
+
+    @media (max-width: 768px) {
+      main {
+        flex-direction: column;
+        height: auto;
+      }
+
+      .vak {
+        width: 100%;
+        height: 100vh;
+      }
+    }
+  </style>
 </head>
 <body>
 
+  <!-- Intro video -->
+  <div class="intro-video-container" id="intro">
+    <video class="intro-video" autoplay muted playsinline>
+      <source src="videos/intro.mp4" type="video/mp4" />
+      Je browser ondersteunt deze video niet.
+    </video>
+  </div>
+
+  <!-- Header -->
   <header>
     <div class="left">
-      <a href="#" class="home-button">VITRIEN</a>
+      <a href="index.html" class="home-button">VITRIEN</a>
     </div>
     <div class="right">
       <a href="#contact" class="top-button">Contact</a>
@@ -21,13 +132,31 @@
     </div>
   </header>
 
- <main>
-  <a href="pagina’s/open-call.html" class="vak">Open Call</a>
-  <a href="pagina’s/kunstenaars.html" class="vak">Kunstenaars</a>
-  <a href="pagina’s/over-vitrien.html" class="vak">Over Vitrien</a>
-  <a href="pagina’s/datas-locaties.html" class="vak">Data's + Locaties</a>
-  <a href="pagina’s/team.html" class="vak">Team</a>
-</main>
+  <!-- Vakken -->
+  <main>
+    <a href="pagina’s/open-call.html" class="vak">Open Call</a>
+    <a href="pagina’s/kunstenaars.html" class="vak">Kunstenaars</a>
+    <a href="pagina’s/over-vitrien.html" class="vak">Over Vitrien</a>
+    <a href="pagina’s/datas-locaties.html" class="vak">Data's + Locaties</a>
+    <a href="pagina’s/team.html" class="vak">Team</a>
+  </main>
+
+  <!-- Script to auto-hide intro -->
+  <script>
+    window.addEventListener('load', () => {
+      const intro = document.getElementById('intro');
+      const video = intro.querySelector('video');
+
+      video.addEventListener('ended', () => {
+        intro.classList.add('hidden');
+      });
+
+      // fallback: hide intro after 5s even if video doesn't trigger 'ended'
+      setTimeout(() => {
+        intro.classList.add('hidden');
+      }, 5000);
+    });
+  </script>
 
 </body>
 </html>
