--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 
   <!-- Vakken -->
   <main>
-    <a href="pagina’s/open-call.html" class="vak">Open Call</a>
-    <a href="pagina’s/kunstenaars.html" class="vak">Kunstenaars</a>
-    <a href="pagina’s/over-vitrien.html" class="vak">Over Vitrien</a>
-    <a href="pagina’s/datas-locaties.html" class="vak">Data's + Locaties</a>
-    <a href="pagina’s/team.html" class="vak">Team</a>
+<a href="paginas/open-call.html" class="vak">Open Call</a>
+<a href="paginas/kunstenaars.html" class="vak">Kunstenaars</a>
+<a href="paginas/over-vitrien.html" class="vak">Over Vitrien</a>
+<a href="paginas/datas-locaties.html" class="vak">Data's + Locaties</a>
+<a href="paginas/team.html" class="vak">Team</a>
   </main>
 
   <!-- Script to auto-hide intro -->
