--- a/paginas/over-vitrien.html
+++ b/paginas/over-vitrien.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Over Vitrien – VITRIEN</title>
+  <link rel="stylesheet" href="../style.css" />
+  <style>
+    .content {
+      margin-top: 100px; /* ruimte onder vaste header */
+      padding: 40px 20px;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 1.2rem;
+      line-height: 1.6;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 20px;
+    }
+
+    p + p {
+      margin-top: 1em;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <div class="left">
+      <a href="../index.html" class="home-button">VITRIEN</a>
+    </div>
+    <div class="right">
+      <a href="#contact" class="top-button">Contact</a>
+      <select class="language-select">
+        <option value="nl">NL</option>
+        <option value="en">EN</option>
+      </select>
+    </div>
+  </header>
+
+  <!-- Inhoud -->
+  <main class="content">
+    <h1>Over Vitrien</h1>
+    <p>
+      Vitrien is een initiatief dat kunst, ruimte en ontmoeting samenbrengt. We gebruiken bestaande winkelvitrines en stadsplekken als tijdelijke tentoonstellingsruimtes, met als doel het straatbeeld te transformeren in een open en toegankelijke kunstroute.
+    </p>
+    <p>
+      Als collectief zijn we nieuwsgierig naar het raakvlak tussen kunst en dagelijkse context. We geloven dat kunst niet alleen in musea thuishoort, maar ook midden in het leven, in de etalage van je lokale slager, in een verlaten pand of in de inkomhal van een theater.
+    </p>
+    <p>
+      Vitrien kadert in LOV2030, de kandidatuur van Leuven voor Europese Culturele Hoofdstad. Onze projecten dragen bij aan een stad waar cultuur zichtbaar, levendig en verrassend is.
+    </p>
+  </main>
+
+</body>
+</html>
 
