--- a/index.html
+++ b/index.html
@@ -5,121 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VITRIEN</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: 'IM Fell English', serif;
-    }
-
-    .intro-video-container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: #e50a06;
-      z-index: 9999;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-    }
-
-    .intro-video {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-
-    .hidden {
-      display: none;
-    }
-
-    header {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background-color: white;
-      z-index: 10;
-      border-bottom: 1px solid black;
-      left: 0;
-      right: 0;
-    }
-
-    .home-button {
-      text-decoration: none;
-      color: black;
-      font-weight: bold;
-      font-size: 1.2rem;
-    }
-
-    .top-button {
-      text-decoration: none;
-      color: black;
-      margin-right: 15px;
-    }
-
-    .language-select {
-      border: none;
-      background: none;
-      font-size: 1rem;
-    }
-
-    .right {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      margin-right: 10px;
-    }
-
-    main {
-      display: flex;
-      height: calc(100vh - 80px);
-      margin-top: 80px;
-    }
-
-    .vak {
-      flex: 1;
-      border: 1px solid black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 2rem;
-      text-align: center;
-      text-decoration: none;
-      color: black;
-      transition: background-color 0.3s ease, color 0.3s ease;
-    }
-
-    .vak:hover,
-    .vak:active {
-      background-color: #e50a06;
-      color: white;
-      cursor: pointer;
-    }
-
-    @media (max-width: 768px) {
-      main {
-        flex-direction: column;
-        height: auto;
-      }
-
-      .vak {
-        width: 100%;
-        height: 100vh;
-      }
-    }
-  </style>
 </head>
-
 <body>
 
   <!-- Intro video -->
@@ -132,25 +18,22 @@
 
   <!-- Header -->
   <header>
-    <div class="left">
-      <a href="index.html" class="home-button">VITRIEN</a>
-    </div>
-    <div class="right">
-      <a href="#contact" class="top-button">Contact</a>
-      <select class="language-select">
-        <option value="nl">NL</option>
-        <option value="en">EN</option>
-      </select>
+    <div class="header-container">
+      <div class="left">
+        <a href="index.html" class="home-button">VITRIEN</a>
+      </div>
+      <div class="right">
+        <a href="#contact" class="top-button">Contact</a>
+        <select class="language-select">
+          <option value="nl">NL</option>
+          <option value="en">EN</option>
+        </select>
+      </div>
     </div>
   </header>
 
   <!-- Vakken -->
   <main>
-<a href="paginas/open-call.html" class="vak">Open Call</a>
-<a href="paginas/kunstenaars.html" class="vak">Kunstenaars</a>
-<a href="paginas/over-vitrien.html" class="vak">Over Vitrien</a>
-<a href="paginas/datas-locaties.html" class="vak">Data's + Locaties</a>
-<a href="paginas/team.html" class="vak">Team</a>
     <a href="paginas/open-call.html" class="vak">Open Call</a>
     <a href="paginas/kunstenaars.html" class="vak">Kunstenaars</a>
     <a href="paginas/over-vitrien.html" class="vak">Over Vitrien</a>
@@ -158,7 +41,12 @@
     <a href="paginas/team.html" class="vak">Team</a>
   </main>
 
-  <!-- Script to auto-hide intro -->
+  <!-- Footer -->
+  <footer>
+    © Thomas De Paepe & Judith Caeyers 2025
+  </footer>
+
+  <!-- Script -->
   <script>
     window.addEventListener('load', () => {
       const intro = document.getElementById('intro');
@@ -168,23 +56,11 @@
         intro.classList.add('hidden');
       });
 
-      // fallback: hide intro after 5s even if video doesn't trigger 'ended'
       setTimeout(() => {
         intro.classList.add('hidden');
       }, 5000);
     });
   </script>
 
-</body>
-
-<footer>
-  © Thomas De Paepe & Judith Caeyers 2025
-</footer>
-  <!-- Footer -->
-  <footer>
-    © Thomas De Paepe & Judith Caeyers 2025
-  </footer>
-
-  
 </body>
 </html>
