--- a/paginas/open-call.html
+++ b/paginas/open-call.html
@@ -28,16 +28,19 @@
 </head>
 <body>
 
+  <!-- ✅ Hier voeg je .header-container toe -->
   <header>
-    <div class="left">
-      <a href="../index.html" class="home-button">VITRIEN</a>
-    </div>
-    <div class="right">
-      <a href="#contact" class="top-button">Contact</a>
-      <select class="language-select">
-        <option value="nl">NL</option>
-        <option value="en">EN</option>
-      </select>
+    <div class="header-container">
+      <div class="left">
+        <a href="../index.html" class="home-button">VITRIEN</a>
+      </div>
+      <div class="right">
+        <a href="#contact" class="top-button">Contact</a>
+        <select class="language-select">
+          <option value="nl">NL</option>
+          <option value="en">EN</option>
+        </select>
+      </div>
     </div>
   </header>
 
@@ -57,10 +60,9 @@
     </p>
   </main>
 
-</body>
-
   <footer>
-  © Judith Caeyers & Thomas De Paepe 2025
-</footer>
+    © Judith Caeyers & Thomas De Paepe 2025
+  </footer>
   
+</body>
 </html>
