--- a/paginas/kunstenaars.html
+++ b/paginas/kunstenaars.html
@@ -1,32 +1,207 @@
-<div class="grid">
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Kunstenaars – Vitrien</title>
+  <link rel="stylesheet" href="../style.css" />
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'IM Fell English', serif;
+    }
 
-  <!-- Niet-linkend vak zonder afbeelding -->
-  <div class="kunstenaar-vak">
-    <div class="naam">Naam 1</div>
-  </div>
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background: white;
+      z-index: 10;
+      border-bottom: none;
+    }
 
-  <!-- Linkend vak met afbeelding -->
-  <a href="bio/joseph.html" class="kunstenaar-vak">
-    <img src="../images/joseph.jpg" alt="Joseph" />
-    <div class="naam">Joseph</div>
-  </a>
+    .header-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-  <a href="bio/ayah.html" class="kunstenaar-vak">
-    <img src="../images/ayah.jpg" alt="Ayah" />
-    <div class="naam">Ayah</div>
-  </a>
+    .left, .right {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
 
-  <div class="kunstenaar-vak">
-    <div class="naam">Naam 4</div>
-  </div>
+    .home-button {
+      font-size: 1.2rem;
+      font-weight: bold;
+      text-decoration: none;
+      color: black;
+    }
 
-  <a href="bio/somto.html" class="kunstenaar-vak">
-    <img src="../images/somto.jpg" alt="Somto" />
-    <div class="naam">Somto</div>
-  </a>
+    .top-button, .language-select {
+      font-size: 1rem;
+      text-decoration: none;
+      color: black;
+      background: none;
+      border: none;
+    }
 
-  <div class="kunstenaar-vak">
-    <div class="naam">Naam 6</div>
-  </div>
+    main {
+      margin-top: 100px;
+      padding: 40px 20px;
+      max-width: 1200px;
+      margin-left: auto;
+      margin-right: auto;
+    }
 
-</div>
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 40px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      justify-items: center;
+    }
+
+    .kunstenaar-vak {
+      aspect-ratio: 3 / 2;
+      width: 100%;
+      position: relative;
+      background-color: #fdfdfd;
+      border: 1px solid black;
+      overflow: hidden;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+      display: block;
+      text-decoration: none;
+    }
+
+    .kunstenaar-vak:hover {
+      transform: scale(1.01);
+    }
+
+    .kunstenaar-vak img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    .naam {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: rgba(229, 10, 6, 0.9);
+      color: white;
+      text-align: center;
+      padding: 10px;
+      font-size: 1.1rem;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
+
+    .kunstenaar-vak:hover .naam {
+      opacity: 1;
+    }
+
+    .bottom-nav {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      padding: 40px 20px;
+      border-top: 1px solid black;
+      margin-top: 80px;
+      flex-wrap: wrap;
+    }
+
+    .bottom-nav a {
+      text-decoration: none;
+      color: black;
+      font-size: 1rem;
+      padding: 8px 12px;
+      border: 1px solid black;
+      transition: background-color 0.3s ease;
+    }
+
+    .bottom-nav a:hover {
+      background-color: #e50a06;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <div class="header-container">
+      <div class="left">
+        <a href="../index.html" class="home-button">VITRIEN</a>
+      </div>
+      <div class="right">
+        <a href="#contact" class="top-button">Contact</a>
+        <select class="language-select">
+          <option value="nl">NL</option>
+          <option value="en">EN</option>
+        </select>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <h1>Kunstenaars</h1>
+    <div class="grid">
+
+      <!-- Niet-linkend vak (placeholder) -->
+      <div class="kunstenaar-vak">
+        <img src="../images/placeholder.jpg" alt="Naam 1">
+        <div class="naam">Naam 1</div>
+      </div>
+
+      <!-- Linkend vak -->
+      <a href="bio/joseph.html" class="kunstenaar-vak">
+        <img src="../images/joseph.jpg" alt="Joseph">
+        <div class="naam">Joseph</div>
+      </a>
+
+      <a href="bio/ayah.html" class="kunstenaar-vak">
+        <img src="../images/ayah.jpg" alt="Ayah">
+        <div class="naam">Ayah</div>
+      </a>
+
+      <div class="kunstenaar-vak">
+        <img src="../images/placeholder.jpg" alt="Naam 4">
+        <div class="naam">Naam 4</div>
+      </div>
+
+      <a href="bio/somto.html" class="kunstenaar-vak">
+        <img src="../images/somto.jpg" alt="Somto">
+        <div class="naam">Somto</div>
+      </a>
+
+      <div class="kunstenaar-vak">
+        <img src="../images/placeholder.jpg" alt="Naam 6">
+        <div class="naam">Naam 6</div>
+      </div>
+
+    </div>
+  </main>
+
+  <!-- Navigatie onderaan -->
+  <nav class="bottom-nav">
+    <a href="open-call.html">Open Call</a>
+    <a href="kunstenaars.html">Kunstenaars</a>
+    <a href="over-vitrien.html">Over Vitrien</a>
+    <a href="datas-locaties.html">Data's + Locaties</a>
+    <a href="team.html">Team</a>
+  </nav>
+
+</body>
+</html>
