--- a/paginas/over-vitrien.html
+++ b/paginas/over-vitrien.html
@@ -118,6 +118,14 @@
       </p>
     </div>
   </main>
+<!-- Navigatie onderaan -->
+<nav class="bottom-nav">
+  <a href="open-call.html">Open Call</a>
+  <a href="kunstenaars.html">Kunstenaars</a>
+  <a href="over-vitrien.html">Over Vitrien</a>
+  <a href="datas-locaties.html">Data's + Locaties</a>
+  <a href="team.html">Team</a>
+</nav>
 
 </body>
 </html>
