--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 
   <!-- Intro video -->
-  <div class="intro-video-container" id="intro">
-    <video class="intro-video" autoplay muted playsinline>
-      <source src="videos/intro.mp4" type="video/mp4" />
-      Je browser ondersteunt deze video niet.
-    </video>
+<div class="intro-tekst-container" id="intro">
+  <div class="typewriter">
+    Welkom bij Vitrien, wij zijn een kunstenaarscollectief die bestaande winkelvitrines en stadsplekken gebruiken als tijdelijke tentoonstellingsruimtes.
   </div>
+</div>
+
 
   <!-- Header -->
   <header>
